--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                         <finalName>server</finalName>
                         <archive>
                             <manifest>
-                                <mainClass>App</mainClass>
+                                <mainClass>MainLauncher</mainClass>
                             </manifest>
                         </archive>
                         <descriptorRefs>
@@ -70,7 +70,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <mainClass>App</mainClass>
+                    <mainClass>MainLauncher</mainClass>
                 </configuration>
             </plugin>
         </plugins>
